--- a/index.html
+++ b/index.html
@@ -14,9 +14,62 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- Stylesheets -->
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="float-grid.css">
 
 </head>
 <body>
+  <nav class="nav-bar">
+    <h1>Star Wars Characters</h1>
+  </nav>
 
+
+
+  <div class="row">
+    <div class="col-4">
+      <div class="card">
+        <img src="images/rey_square.png" alt="" class="card-image"/>
+        <p class="card-title">Rey</p>
+        <p class="card-description">Protagonist, from Tatooine</p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card">
+        <img src="images/finn_square.png" alt="" class="card-image"/>
+        <p class="card-title">Finn</p>
+        <p class="card-description">Strom Trooper, befriends Ray</p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card">
+        <img src="images/kylo_square.png" alt="" class="card-image"/>
+        <p class="card-title">Kylo</p>
+        <p class="card-description">Main villian, or is he?</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-4">
+      <div class="card">
+        <img src="images/poe_square.png" alt="" class="card-image"/>
+        <p class="card-title">Peo</p>
+        <p class="card-description">Neutro pilot</p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card">
+        <img src="images/chewbacca_square.png" alt="" class="card-image"/>
+        <p class="card-title">Chewbacca</p>
+        <p class="card-description">A great first mate</p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card">
+        <img src="images/yoda_square.png" alt="" class="card-image"/>
+        <p class="card-title">Yoda</p>
+        <p class="card-description">Wise old Jedi master</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
