--- a/index.html
+++ b/index.html
@@ -23,53 +23,42 @@
     <h1>Star Wars Characters</h1>
   </nav>
 
+  <main>
+    <section class="row">
+      <div class="col-4">
+        <img src="images/rey_square.png" alt="" />
+        <p>Rey</p>
+        <p>Protagonist, from Tatooine</p>
+      </div>
+      <div class="col-4">
+        <img src="images/finn_square.png" alt="" />
+        <p>Finn</p>
+        <p>Strom Trooper, befriends Ray</p>
+      </div>
+      <div class="col-4">
+        <img src="images/kylo_square.png" alt="" />
+        <p>Kylo</p>
+        <p>Main villian, or is he?</p>
+      </div>
+    </section>
 
-
-  <div class="row">
-    <div class="col-4">
-      <div class="card">
-        <img src="images/rey_square.png" alt="" class="card-image"/>
-        <p class="card-title">Rey</p>
-        <p class="card-description">Protagonist, from Tatooine</p>
+    <section class="row">
+      <div class="col-4">
+        <img src="images/poe_square.png" alt="" />
+        <p>Peo</p>
+        <p>Neutro pilot</p>
       </div>
-    </div>
-    <div class="col-4">
-      <div class="card">
-        <img src="images/finn_square.png" alt="" class="card-image"/>
-        <p class="card-title">Finn</p>
-        <p class="card-description">Strom Trooper, befriends Ray</p>
+      <div class="col-4">
+        <img src="images/chewbacca_square.png" alt="" />
+        <p>Chewbacca</p>
+        <p>A great first mate</p>
       </div>
-    </div>
-    <div class="col-4">
-      <div class="card">
-        <img src="images/kylo_square.png" alt="" class="card-image"/>
-        <p class="card-title">Kylo</p>
-        <p class="card-description">Main villian, or is he?</p>
+      <div class="col-4">
+        <img src="images/yoda_square.png" alt="" />
+        <p>Yoda</p>
+        <p>Wise old Jedi master</p>
       </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-4">
-      <div class="card">
-        <img src="images/poe_square.png" alt="" class="card-image"/>
-        <p class="card-title">Peo</p>
-        <p class="card-description">Neutro pilot</p>
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="card">
-        <img src="images/chewbacca_square.png" alt="" class="card-image"/>
-        <p class="card-title">Chewbacca</p>
-        <p class="card-description">A great first mate</p>
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="card">
-        <img src="images/yoda_square.png" alt="" class="card-image"/>
-        <p class="card-title">Yoda</p>
-        <p class="card-description">Wise old Jedi master</p>
-      </div>
-    </div>
-  </div>
+    </section>
+  </main>
 </body>
 </html>
